--- a/assistant/.chainlit/config.toml
+++ b/assistant/.chainlit/config.toml
@@ -9,21 +9,24 @@ user_env = []
 # Duration (in seconds) during which the session is saved when the connection is lost
 session_timeout = 3600
 
-# Enable third parties caching (e.g LangChain cache)
+# Duration (in seconds) of the user session expiry
+user_session_timeout = 1296000  # 15 days
+
+# Enable third parties caching (e.g., LangChain cache)
 cache = false
 
 # Authorized origins
 allow_origins = ["*"]
-
-# Follow symlink for asset mount (see https://github.com/Chainlit/chainlit/issues/317)
-# follow_symlink = false
 
 [features]
 # Process and display HTML in messages. This can be a security risk (see https://stackoverflow.com/questions/19603097/why-is-it-dangerous-to-render-user-generated-html-or-javascript)
 unsafe_allow_html = false
 
 # Process and display mathematical expressions. This can clash with "$" characters in messages.
-latex = true
+latex = false
+
+# Autoscroll new user messages at the top of the window
+user_message_autoscroll = true
 
 # Automatically tag threads with the current chat profile (if a chat profile is used)
 auto_tag_thread = true
@@ -33,52 +36,62 @@ edit_message = true
 
 # Authorize users to spontaneously upload files with messages
 [features.spontaneous_file_upload]
-enabled = false
+enabled = true
+# Define accepted file types using MIME types
+# Examples:
+# 1. For specific file types:
+#    accept = ["image/jpeg", "image/png", "application/pdf"]
+# 2. For all files of certain type:
+#    accept = ["image/*", "audio/*", "video/*"]
+# 3. For specific file extensions:
+#    accept = { "application/octet-stream" = [".xyz", ".pdb"] }
+# Note: Using "*/*" is not recommended as it may cause browser warnings
 accept = ["*/*"]
 max_files = 20
 max_size_mb = 500
 
 [features.audio]
-# Threshold for audio recording
-min_decibels = -45
-# Delay for the user to start speaking in MS
-initial_silence_timeout = 3000
-# Delay for the user to continue speaking in MS. If the user stops speaking for this duration, the recording will stop.
-silence_timeout = 1500
-# Above this duration (MS), the recording will forcefully stop.
-max_duration = 15000
-# Duration of the audio chunks in MS
-chunk_duration = 1000
 # Sample rate of the audio
-sample_rate = 44100
+sample_rate = 24000
+
+[features.mcp.sse]
+enabled = true
+
+[features.mcp.stdio]
+enabled = true
+# Only the executables in the allow list can be used for MCP stdio server.
+# Only need the base name of the executable, e.g. "npx", not "/usr/bin/npx".
+# Please don't comment this line for now, we need it to parse the executable name.
+allowed_executables = ["npx", "uvx"]
 
 [UI]
 # Name of the Application
 name = "PTX Assistant"
 
-# Description of the assistant. This is used for HTML tags.
-description = "An AI assistant assisting me in my personal tasks"
+default_theme = "light"
+# layout = "wide"
+# default_sidebar_state = "open"
 
-# Large size content are by default collapsed for a cleaner ui
-default_expand_message = true
-default_collapse_content = false
+# Description of the assistant. This is used for HTML tags.
+description = "An AI assistant assisting Bible translators in their daily workflow"
 
 # Chain of Thought (CoT) display mode. Can be "hidden", "tool_call" or "full".
 cot = "full"
-
-# Link to your github repo. This will add a github button in the UI's header.
-# github = ""
 
 # Specify a CSS file that can be used to customize the user interface.
 # The CSS file can be served from the public directory or via an external link.
 custom_css = "public/custom.css"
 
-# Specify a Javascript file that can be used to customize the user interface.
-# The Javascript file can be served from the public directory.
+# Specify a JavaScript file that can be used to customize the user interface.
+# The JavaScript file can be served from the public directory.
 custom_js = "/public/custom.js"
 
-# Specify a custom font url.
-# custom_font = "https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+# Custom login page image, relative to public directory or external URL
+# login_page_image = "/public/custom-background.jpg"
+
+# Custom login page image filter (Tailwind internal filters, no dark/light variants)
+# login_page_image_filter = "brightness-50 grayscale"
+# login_page_image_dark_filter = "contrast-200 blur-sm"
 
 # Specify a custom meta image url.
 # custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
@@ -88,10 +101,11 @@ custom_js = "/public/custom.js"
 # Be careful: If this is a relative path, it should not start with a slash.
 # custom_build = "./public/build"
 
-[UI.theme]
-default = "light"
-# layout = "wide"
-# font_family = "Palatino Linotype, Book Antiqua, serif"
+# Specify optional one or more custom links in the header.
+# [[UI.header_links]]
+#     name = "Issues"
+#     icon_url = "https://avatars.githubusercontent.com/u/128686189?s=200&v=4"
+#     url = "https://github.com/Chainlit/chainlit/issues"
 
 # Paratext-inspired Light Theme
 [UI.theme.light]
@@ -123,4 +137,4 @@ paper = "#374024"      # Dark olive tone
     highlight = "#FFD700"  # Golden highlight for scripture refs
 
 [meta]
-generated_by = "1.2.0"
+generated_by = "2.4.400"
