--- a/assistant/chat.config.yaml
+++ b/assistant/chat.config.yaml
@@ -7,30 +7,12 @@ system:
       retry_min_seconds: 1
       retry_max_seconds: 5
       timeout: 30
-    file_upload:
-      max_files: 3
-      max_size_mb: 10
-      allowed_file_formats:
-        - .txt
-        - .pdf
-        - .docx
-      accepted_mime_types:
-        - text/plain
-        - application/pdf
-        - application/vnd.openxmlformats-officedocument.wordprocessingml.document
-    vectorization:
-      batch_size: 16
-      text_splitter:
-        chunk_size: 1000
-        chunk_overlap: 10
   models:
     default:
-      name: &default_llm_model gpt-4o-mini
-      temperature: 1.0
-    openai:
-      api_key:
-        type: env
-        key: OPENAI_API_KEY
+      name: &default_llm_model "Qwen/Qwen2.5-1.5B-Instruct"
+      temperature: 0.8
+    local_lms:
+      performance_mode: false
 
 settings: &default_settings
   - type: Slider
@@ -48,8 +30,8 @@ model_settings: &model_settings
       id: "Model"
       label: "Model"
       values:
-        - "gpt-4o-mini"
-        - "gpt-4o"
+        - "Qwen/Qwen2.5-0.5B-Instruct"
+        - "Qwen/Qwen2.5-1.5B-Instruct"
       initial_value: *default_llm_model
 
 chat_profiles:
@@ -86,6 +68,7 @@ chat_profiles:
     starters: [ ]
     file_upload:
       prompt: "Hi {user}! Please upload up to {max_files} {file_formats} files of up to **{max_size}** MB to begin."
+      preload_files: [ ]
       wrong_file_type_message: |
         Uploaded file{file_name} not an allowed file type!
         You are allowed to upload up to {max_files} {file_formats} files of up to **{max_size}** MB.
