--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ chainlit==2.4.400
 langchain==0.3.22
 langchain_community==0.3.20
 langchain_core==0.3.50
+langchain_huggingface==0.1.2
 langchain_openai==0.3.12
 literalai==0.1.201
 pydantic==2.11.2
