Refactor PTX Assistant with updated agent initialization and document source management
- Replace `create_tool_calling_agent` with `initialize_agent` for improved agent setup.
- Simplify `update_sources` method to directly update sources with a new dictionary.
- Enhance error handling in agent execution to log errors and inform the user.
- Adjust pipeline settings for text generation to support new configuration options.
- Clean up commented code for better readability and maintainability.

--- a/assistant/chat.config.yaml
+++ b/assistant/chat.config.yaml
@@ -12,7 +12,8 @@ system:
       name: &default_llm_model "Qwen/Qwen2.5-0.5B-Instruct"
       temperature: 0.8
     local_lms:
-      performance_mode: false
+      max_new_tokens: 1024
+      performance_mode: true
 
 settings: &default_settings
   - type: Slider
