--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 chainlit==2.4.400
-langchain==0.3.22
-langchain_community==0.3.20
-langchain_core==0.3.50
-langchain_huggingface==0.1.2
-langchain_openai==0.3.12
+langchain~=0.3.22
+langchain-community~=0.3.20
+langchain-core~=0.3.50
+langchain-huggingface~=0.1.2
+langchain-openai~=0.3.12
 literalai==0.1.201
-pydantic==2.11.2
-pypdf==5.4.0
-python-dotenv==1.1.0
-python_docx==1.1.2
-PyYAML==6.0.2
-sentence-transformers==4.0.2
+pydantic~=2.11.2
+pypdf~=5.4.0
+python-dotenv~=1.1.0
+python-docx~=1.1.2
+PyYAML~=6.0.2
+sentence-transformers~=4.0.2
+torch~=2.6.0
+transformers~=4.50.3
